--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
-    <title>Javascript Asteroids</title>
+    <title>Asteroids</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="asteroids.js"></script>
 </head>
